<resources>
    <string name="app_name">usth_weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Sun">Sun</string>
    <string name="usth_weather" translatable="false">USTH WEATHER</string>
    <string name="party_cloudy">Party Cloudy</string>
    <string name="degree_1" translatable="false">24C - 31C</string>
    <string name="refresh">Refresh</string>
    <string name="dropdown_menu" translatable="false">DropdownMenu</string>
    <string name="share" translatable="false">Share</string>
</resources>