<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/dropdown_menu"
        android:icon="@drawable/baseline_menu_24"
        android:title="@string/dropdown_menu"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/share"
                app:showAsAction="ifRoom">
            </item>
        </menu>
    </item>
</menu>